# ztop

./: .env  Cargo.toml  configuration.yaml  test.rest
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20240919015409_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
